# latexila

./: CONTRIBUTING.md  HACKING  Makefile.am  NEWS  README  README.in  README.md  configure.ac  latexila.doap
data/: Makefile.am  latexhelp.html  latexila.appdata.xml.in  latexila.desktop.in.in  org.gnome.latexila.appdata.xml.in  org.gnome.latexila.desktop.in.in  org.gnome.latexila.gschema.xml.in
data/build_tools/: build_tools.its  build_tools.xml
data/icons/: Makefile.am
data/icons/16x16/: Makefile.am
data/images/: Makefile.am
data/images/app/: Makefile.am
data/templates/: beamer.xml  letter.xml  templates.its  templates.pot
docs/reference/: Makefile.am  latexila-docs.xml  latexila-sections.txt
flatpak/: .gitignore  add-remote.sh  build.sh  install-app.sh  org.gnome.latexila.json  run-app.sh
help/: Makefile.am
help/C/: projects.page  spell_checking.page  synctex.page
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/hu/: hu.po
help/pl/: pl.po
help/sv/: sv.po
help/uk/: uk.po
po/: LINGUAS  POTFILES.in  POTFILES.skip  bs.po  ca.po  cs.po  de.po  el.po  eo.po  es.po  eu.po  fr.po  gl.po  he.po  hu.po  id.po  it.po  lt.po  lv.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CN.po
src/: Makefile.am  app_settings.vala  bottom_panel.vala  build_tool_dialog.vala  build_tools.vala  build_tools_preferences.vala  clean_build_files.vala  completion.vala  custom_statusbar.vala  dialogs.vala  document.vala  document_structure.vala  document_tab.vala  document_view.vala  documents_panel.vala  file_browser.vala  finance.vala  latex_menu.vala  latexila.gresource.xml  latexila.vala  latexila_app.vala  main.vala  main_window.vala  main_window_build_tools.vala  main_window_documents.vala  main_window_edit.vala  main_window_file.vala  main_window_structure.vala  main_window_tools.vala  menu_in_toolbar.vala  most_used_symbols.vala  preferences_dialog.vala  project_dialogs.vala  projects.vala  search.vala  side_panel.vala  stock_icons.vala  structure.vala  structure_model.vala  symbols.vala  (+7 more)
src/evince/: Makefile.am
src/gedit/: Makefile.am  gedit-close-button.c
src/liblatexila/: Makefile.am  latexila-build-job.c  latexila-build-job.h  latexila-build-tool.c  latexila-build-tool.h  latexila-build-tools-default.c  latexila-build-tools-default.h  latexila-build-tools-personal.c  latexila-build-tools-personal.h  latexila-build-tools.c  latexila-build-tools.h  latexila-build-view.c  latexila-build-view.h  latexila-enum-types.h.template  latexila-post-processor-all-output.c  latexila-post-processor-all-output.h  latexila-post-processor-latex.c  latexila-post-processor-latex.h  latexila-post-processor-latexmk.c  latexila-post-processor-latexmk.h  latexila-post-processor.c  latexila-post-processor.h  latexila-synctex.c  latexila-synctex.h  latexila-templates-common.c  latexila-templates-common.h  latexila-templates-default.c  latexila-templates-default.h  latexila-templates-dialogs.c  latexila-templates-dialogs.h  latexila-templates-manage-dialog.c  latexila-templates-manage-dialog.h  latexila-templates-personal.c  latexila-templates-personal.h  latexila-templates.c  latexila-templates.h  latexila-types.h  latexila-utils.c  latexila-utils.h  latexila.h
src/ui/: Makefile.am  latexila.adwaita.css  menus.ui  preferences_dialog.ui  ui.xml
tests/: Makefile.am  build-tools.gresource.xml  test-build-tools.c
vapi/: config.vapi
